# shorty-backend

./: .env.template  Cargo.toml  README.md
migrations/: 20220324093053_init.sql
src/: main.rs
src/models/: context.rs  mod.rs  redirect.rs
src/repositories/: redirect.rs
src/routes/: add.rs  index.rs  mod.rs
