[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
dotenv = "0.15.0"
rand = "0.8.5"
sqlx = { version = "0.5.11", features = ["postgres", "runtime-actix-rustls"] }
serde = { version = "1.0", features = ["derive"] }